add UDSM material model (supported by Marc-Mentat)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,9 @@ set( CONSTITUTIVE_LAWS_APPLICATION_SOURCES
 if(DEFINED UMAT_LIBRARY)
     add_definitions(-DKRATOS_UMAT_LIBRARY_IS_PROVIDED)
 endif()
+if(DEFINED UDSM_LIBRARY)
+    add_definitions(-DKRATOS_UDSM_LIBRARY_IS_PROVIDED)
+endif()
 
 if(DEFINED OPENSEES_DIR)
     include_directories( ${OPENSEES_DIR} )
@@ -62,6 +65,9 @@ target_link_libraries( KratosConstitutiveLawsApplication dl )
 target_link_libraries( KratosConstitutiveLawsApplication ${OPENSEES_LIBRARIES} )
 if(DEFINED UMAT_LIBRARY)
     target_link_libraries( KratosConstitutiveLawsApplication ${UMAT_LIBRARY} )
+endif()
+if(DEFINED UDSM_LIBRARY)
+    target_link_libraries( KratosConstitutiveLawsApplication ${UDSM_LIBRARY} )
 endif()
 set_target_properties(KratosConstitutiveLawsApplication PROPERTIES PREFIX "")
 install(TARGETS KratosConstitutiveLawsApplication DESTINATION libs )
